WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246823
MobileMail sometimes crashes underneath -[WKContentView(WKInteraction) deferringGestures]
https://bugs.webkit.org/show_bug.cgi?id=246823
Summary
MobileMail sometimes crashes underneath -[WKContentView(WKInteraction) deferr...
Wenson Hsieh
Reported
2022-10-20 12:31:14 PDT
rdar://100971798
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-10-20 13:15:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5599
EWS
Comment 2
2022-10-20 14:46:36 PDT
Committed
255804@main
(fdc295002ed6): <
https://commits.webkit.org/255804@main
> Reviewed commits have been landed. Closing PR #5599 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug